added project description to README

--- a/Notebook/EDA.ipynb
+++ b/Notebook/EDA.ipynb
@@ -2,19 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b02ad814",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting README.md\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile README.md\n",
     "# Spotify EDA Project\n",
-    "# This project utilizes exploratory data analysis (EDA) techniques to analyze a dataset of Spotify songs. The goal is to uncover patterns and insights about the characteristics of popular songs on the platform."
+    "# This is my esploratory data analysis on 2024 Spotify Streaming data. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bc5d7865",
    "metadata": {},
    "outputs": [],
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c039aa62",
    "metadata": {},
    "outputs": [
@@ -401,7 +409,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "24e9b15b",
    "metadata": {},
    "outputs": [],
@@ -449,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "34853333",
    "metadata": {},
    "outputs": [
@@ -653,7 +661,7 @@
        "4          0.000000    0.0829    0.167  119.949               4    acoustic  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a883a811",
    "metadata": {},
    "outputs": [
@@ -702,7 +710,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "01972b75",
    "metadata": {},
    "outputs": [
@@ -756,7 +764,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2a50d5ba",
    "metadata": {},
    "outputs": [
@@ -813,7 +821,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8d15695a",
    "metadata": {},
    "outputs": [
@@ -924,7 +932,7 @@
        "65900  138.391               4       k-pop  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1760cc2a",
    "metadata": {},
    "outputs": [
@@ -966,7 +974,7 @@
        "Length: 114000, dtype: bool"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0d6acc57",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1017,7 @@
        "Length: 114000, dtype: bool"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fd01ea92",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1046,7 @@
        "np.int64(894)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5356f000",
    "metadata": {},
    "outputs": [
@@ -1445,7 +1453,7 @@
        "[894 rows x 20 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1466,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e96d81b3",
    "metadata": {},
    "outputs": [
@@ -1867,7 +1875,7 @@
        "[894 rows x 20 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b7614a81",
    "metadata": {},
    "outputs": [
@@ -1909,7 +1917,7 @@
        "Name: count, Length: 31437, dtype: int64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1928,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "74529106",
    "metadata": {},
    "outputs": [
@@ -2152,7 +2160,7 @@
        "max       243.372000        5.000000  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2171,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "1f3a62a4",
    "metadata": {},
    "outputs": [
@@ -2181,7 +2189,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2210,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3174d101",
    "metadata": {},
    "outputs": [
@@ -2220,7 +2228,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2241,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "030e475a",
    "metadata": {},
    "outputs": [],
@@ -2251,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "87c81565",
    "metadata": {},
    "outputs": [
@@ -2259,7 +2267,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "df\t pd\t plt\t seaborn\t \n"
+      "df\t pd\t plt\t sns\t \n"
      ]
     }
    ],
@@ -2277,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9655446f",
    "metadata": {},
    "outputs": [
@@ -2287,7 +2295,7 @@
        "<Axes: xlabel='danceability'>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2317,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "2faeac9f",
    "metadata": {},
    "outputs": [
@@ -2667,7 +2675,7 @@
        "time_signature          1.000000  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2691,7 +2699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "31ff0b50",
    "metadata": {},
    "outputs": [
@@ -2701,7 +2709,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2731,7 +2739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "2e777ea5",
    "metadata": {},
    "outputs": [
@@ -2741,7 +2749,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2771,17 +2779,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "83f72bc3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x29aeb05fe00>"
+       "<seaborn.axisgrid.PairGrid at 0x218ed51dd30>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2802,17 +2810,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "2974ece1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x29af1540910>"
+       "<seaborn.axisgrid.PairGrid at 0x218f1c50410>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2842,7 +2850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "d2919ae7",
    "metadata": {},
    "outputs": [
@@ -2864,7 +2872,7 @@
        "Name: count, Length: 114, dtype: int64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2875,17 +2883,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "192d9daf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x29add8e2190>"
+       "<seaborn.axisgrid.PairGrid at 0x218f1b225d0>"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
